parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BINARY
    BREAK
    CIENTIFIC
    CONTINUE
    EXTENDS
    FLOAT
    HEXADEC
    LENGTH
    LINECOMMENT
    MULTILINECOMMENT
    NULL
    STRING
    UMINUS

Grammar

Rule 0     S' -> Program
Rule 1     Program -> ClassDeclarationList
Rule 2     ClassDeclarationList -> ClassDeclaration ClassDeclarationList
Rule 3     ClassDeclarationList -> lambda
Rule 4     ClassDeclaration -> CLASS IDEN LEFTBRACE FieldMethDecl RIGHTBRACE
Rule 5     FieldMethDecl -> FieldMeth FieldMethDecl
Rule 6     FieldMethDecl -> lambda
Rule 7     FieldMeth -> FieldDeclaration
Rule 8     FieldMeth -> MethodDeclaration
Rule 9     FieldDeclaration -> Declarators IDEN SEMICOLON
Rule 10    Declarators -> Access Static Type
Rule 11    Access -> PUBLIC
Rule 12    Access -> PRIVATE
Rule 13    Access -> lambda
Rule 14    Static -> STATIC
Rule 15    Static -> lambda
Rule 16    MethodDeclaration -> Declarators IDEN LEFTPARENT ParameterList RIGHTPARENT LEFTBRACE StatementList MethodReturn RIGHTBRACE
Rule 17    ParameterList -> Parameter
Rule 18    ParameterList -> lambda
Rule 19    Parameter -> Type IDEN CommaParameter
Rule 20    CommaParameter -> CommaTypeId CommaParameter
Rule 21    CommaParameter -> lambda
Rule 22    CommaTypeId -> COMMA Type IDEN
Rule 23    StatementList -> Statement StatementList
Rule 24    StatementList -> lambda
Rule 25    MethodReturn -> RETURN Expression SEMICOLON
Rule 26    MethodReturn -> lambda
Rule 27    Type -> PrimType
Rule 28    Type -> ClassType
Rule 29    Type -> ArrType
Rule 30    PrimType -> INT
Rule 31    PrimType -> BOOLEAN
Rule 32    PrimType -> VOID
Rule 33    ClassType -> IDEN
Rule 34    ArrType -> ArrayType LEFTSQRBRACKET RIGHTSQRBRACKET
Rule 35    ArrayType -> INT
Rule 36    ArrayType -> ClassType
Rule 37    ArgumentList -> Argument
Rule 38    ArgumentList -> lambda
Rule 39    Argument -> Expression CommaExpressionList
Rule 40    CommaExpressionList -> CommaExpression CommaExpressionList
Rule 41    CommaExpressionList -> lambda
Rule 42    CommaExpression -> COMMA Expression
Rule 43    Reference -> ReferenceType DotIdList
Rule 44    ReferenceType -> THIS
Rule 45    ReferenceType -> IDEN
Rule 46    DotIdList -> DotId DotIdList
Rule 47    DotIdList -> lambda
Rule 48    DotId -> DOT IDEN
Rule 49    Statement -> LeftBraceStatementRightBracet
Rule 50    Statement -> TypeAssign
Rule 51    Statement -> ReferenceAssign
Rule 52    Statement -> ReferenceArgumantSemicolon
Rule 53    Statement -> IfStatement
Rule 54    Statement -> WhileStatement
Rule 55    LeftBraceStatementRightBracet -> LEFTBRACE StatementList RIGHTBRACE
Rule 56    TypeAssign -> Type IDEN ASSIGNMENT Expression SEMICOLON
Rule 57    ReferenceAssign -> Reference LEFTSQRBRACKETExpressionRIGHTSQRBRACKET ASSIGNMENT Expression SEMICOLON
Rule 58    LEFTSQRBRACKETExpressionRIGHTSQRBRACKET -> LEFTSQRBRACKET Expression RIGHTSQRBRACKET
Rule 59    LEFTSQRBRACKETExpressionRIGHTSQRBRACKET -> lambda
Rule 60    ReferenceArgumantSemicolon -> ReferenceArgumant SEMICOLON
Rule 61    ReferenceArgumant -> Reference LEFTPARENT ArgumentList RIGHTPARENT
Rule 62    IfStatement -> IF LEFTPARENT Expression RIGHTPARENT Statement ElseStament
Rule 63    ElseStament -> ELSE Statement
Rule 64    ElseStament -> lambda
Rule 65    WhileStatement -> WHILE LEFTPARENT Expression RIGHTPARENT Statement
Rule 66    Expression -> ReferenceExpression
Rule 67    Expression -> ReferenceArgumant
Rule 68    Expression -> UnopExpression
Rule 69    Expression -> LEFTPARENTExpressionRIGHTPARENT
Rule 70    Expression -> BinopExpression
Rule 71    Expression -> NUMBER
Rule 72    Expression -> TRUE
Rule 73    Expression -> FALSE
Rule 74    Expression -> NewInstance
Rule 75    ReferenceExpression -> Reference LEFTSQRBRACKETExpressionRIGHTSQRBRACKET
Rule 76    UnopExpression -> UnaryMinus
Rule 77    UnopExpression -> UnaryNot
Rule 78    UnaryNot -> NOT Expression
Rule 79    UnaryMinus -> SUBSTRACTION Expression
Rule 80    LEFTPARENTExpressionRIGHTPARENT -> LEFTPARENT Expression RIGHTPARENT
Rule 81    BinopExpression -> Expression ADDITION Expression
Rule 82    BinopExpression -> Expression SUBSTRACTION Expression
Rule 83    BinopExpression -> Expression MULTIPLICATION Expression
Rule 84    BinopExpression -> Expression DIVISION Expression
Rule 85    BinopExpression -> Expression MODULO Expression
Rule 86    BinopExpression -> Expression AND Expression
Rule 87    BinopExpression -> Expression OR Expression
Rule 88    BinopExpression -> Expression CONCAT Expression
Rule 89    BinopExpression -> Expression LESS Expression
Rule 90    BinopExpression -> Expression LESSEQUAL Expression
Rule 91    BinopExpression -> Expression GREATER Expression
Rule 92    BinopExpression -> Expression GREATEREQUAL Expression
Rule 93    BinopExpression -> Expression EQUAL Expression
Rule 94    BinopExpression -> Expression NOTEQUAL Expression
Rule 95    NewInstance -> NEW NewObject
Rule 96    NewObject -> NewClass
Rule 97    NewObject -> NewIntArray
Rule 98    NewObject -> NewIdArray
Rule 99    NewClass -> IDEN LEFTPARENT RIGHTPARENT
Rule 100   NewIntArray -> INT LEFTSQRBRACKET Expression RIGHTSQRBRACKET
Rule 101   NewIdArray -> IDEN LEFTSQRBRACKET Expression RIGHTSQRBRACKET
Rule 102   lambda -> <empty>

Terminals, with rules where they appear

ADDITION             : 81
AND                  : 86
ASSIGNMENT           : 56 57
BINARY               : 
BOOLEAN              : 31
BREAK                : 
CIENTIFIC            : 
CLASS                : 4
COMMA                : 22 42
CONCAT               : 88
CONTINUE             : 
DIVISION             : 84
DOT                  : 48
ELSE                 : 63
EQUAL                : 93
EXTENDS              : 
FALSE                : 73
FLOAT                : 
GREATER              : 91
GREATEREQUAL         : 92
HEXADEC              : 
IDEN                 : 4 9 16 19 22 33 45 48 56 99 101
IF                   : 62
INT                  : 30 35 100
LEFTBRACE            : 4 16 55
LEFTPARENT           : 16 61 62 65 80 99
LEFTSQRBRACKET       : 34 58 100 101
LENGTH               : 
LESS                 : 89
LESSEQUAL            : 90
LINECOMMENT          : 
MODULO               : 85
MULTILINECOMMENT     : 
MULTIPLICATION       : 83
NEW                  : 95
NOT                  : 78
NOTEQUAL             : 94
NULL                 : 
NUMBER               : 71
OR                   : 87
PRIVATE              : 12
PUBLIC               : 11
RETURN               : 25
RIGHTBRACE           : 4 16 55
RIGHTPARENT          : 16 61 62 65 80 99
RIGHTSQRBRACKET      : 34 58 100 101
SEMICOLON            : 9 25 56 57 60
STATIC               : 14
STRING               : 
SUBSTRACTION         : 79 82
THIS                 : 44
TRUE                 : 72
UMINUS               : 
VOID                 : 32
WHILE                : 65
error                : 

Nonterminals, with rules where they appear

Access               : 10
Argument             : 37
ArgumentList         : 61
ArrType              : 29
ArrayType            : 34
BinopExpression      : 70
ClassDeclaration     : 2
ClassDeclarationList : 1 2
ClassType            : 28 36
CommaExpression      : 40
CommaExpressionList  : 39 40
CommaParameter       : 19 20
CommaTypeId          : 20
Declarators          : 9 16
DotId                : 46
DotIdList            : 43 46
ElseStament          : 62
Expression           : 25 39 42 56 57 58 62 65 78 79 80 81 81 82 82 83 83 84 84 85 85 86 86 87 87 88 88 89 89 90 90 91 91 92 92 93 93 94 94 100 101
FieldDeclaration     : 7
FieldMeth            : 5
FieldMethDecl        : 4 5
IfStatement          : 53
LEFTPARENTExpressionRIGHTPARENT : 69
LEFTSQRBRACKETExpressionRIGHTSQRBRACKET : 57 75
LeftBraceStatementRightBracet : 49
MethodDeclaration    : 8
MethodReturn         : 16
NewClass             : 96
NewIdArray           : 98
NewInstance          : 74
NewIntArray          : 97
NewObject            : 95
Parameter            : 17
ParameterList        : 16
PrimType             : 27
Program              : 0
Reference            : 57 61 75
ReferenceArgumant    : 60 67
ReferenceArgumantSemicolon : 52
ReferenceAssign      : 51
ReferenceExpression  : 66
ReferenceType        : 43
Statement            : 23 62 63 65
StatementList        : 16 23 55
Static               : 10
Type                 : 10 19 22 56
TypeAssign           : 50
UnaryMinus           : 76
UnaryNot             : 77
UnopExpression       : 68
WhileStatement       : 54
lambda               : 3 6 13 15 18 21 24 26 38 41 47 59 64

Parsing method: SLR

state 0

    (0) S' -> . Program
    (1) Program -> . ClassDeclarationList
    (2) ClassDeclarationList -> . ClassDeclaration ClassDeclarationList
    (3) ClassDeclarationList -> . lambda
    (4) ClassDeclaration -> . CLASS IDEN LEFTBRACE FieldMethDecl RIGHTBRACE
    (102) lambda -> .

    CLASS           shift and go to state 5
    $end            reduce using rule 102 (lambda -> .)
    RIGHTBRACE      reduce using rule 102 (lambda -> .)
    STATIC          reduce using rule 102 (lambda -> .)
    INT             reduce using rule 102 (lambda -> .)
    BOOLEAN         reduce using rule 102 (lambda -> .)
    VOID            reduce using rule 102 (lambda -> .)
    IDEN            reduce using rule 102 (lambda -> .)
    RIGHTPARENT     reduce using rule 102 (lambda -> .)
    RETURN          reduce using rule 102 (lambda -> .)
    ASSIGNMENT      reduce using rule 102 (lambda -> .)
    LEFTBRACE       reduce using rule 102 (lambda -> .)
    IF              reduce using rule 102 (lambda -> .)
    WHILE           reduce using rule 102 (lambda -> .)
    THIS            reduce using rule 102 (lambda -> .)
    LEFTSQRBRACKET  reduce using rule 102 (lambda -> .)
    LEFTPARENT      reduce using rule 102 (lambda -> .)
    SEMICOLON       reduce using rule 102 (lambda -> .)
    COMMA           reduce using rule 102 (lambda -> .)
    RIGHTSQRBRACKET reduce using rule 102 (lambda -> .)
    ELSE            reduce using rule 102 (lambda -> .)
    ADDITION        reduce using rule 102 (lambda -> .)
    SUBSTRACTION    reduce using rule 102 (lambda -> .)
    MULTIPLICATION  reduce using rule 102 (lambda -> .)
    DIVISION        reduce using rule 102 (lambda -> .)
    MODULO          reduce using rule 102 (lambda -> .)
    AND             reduce using rule 102 (lambda -> .)
    OR              reduce using rule 102 (lambda -> .)
    CONCAT          reduce using rule 102 (lambda -> .)
    LESS            reduce using rule 102 (lambda -> .)
    LESSEQUAL       reduce using rule 102 (lambda -> .)
    GREATER         reduce using rule 102 (lambda -> .)
    GREATEREQUAL    reduce using rule 102 (lambda -> .)
    EQUAL           reduce using rule 102 (lambda -> .)
    NOTEQUAL        reduce using rule 102 (lambda -> .)

    Program                        shift and go to state 1
    ClassDeclarationList           shift and go to state 2
    ClassDeclaration               shift and go to state 3
    lambda                         shift and go to state 4

state 1

    (0) S' -> Program .



state 2

    (1) Program -> ClassDeclarationList .

    $end            reduce using rule 1 (Program -> ClassDeclarationList .)


state 3

    (2) ClassDeclarationList -> ClassDeclaration . ClassDeclarationList
    (2) ClassDeclarationList -> . ClassDeclaration ClassDeclarationList
    (3) ClassDeclarationList -> . lambda
    (4) ClassDeclaration -> . CLASS IDEN LEFTBRACE FieldMethDecl RIGHTBRACE
    (102) lambda -> .

    CLASS           shift and go to state 5
    $end            reduce using rule 102 (lambda -> .)
    RIGHTBRACE      reduce using rule 102 (lambda -> .)
    STATIC          reduce using rule 102 (lambda -> .)
    INT             reduce using rule 102 (lambda -> .)
    BOOLEAN         reduce using rule 102 (lambda -> .)
    VOID            reduce using rule 102 (lambda -> .)
    IDEN            reduce using rule 102 (lambda -> .)
    RIGHTPARENT     reduce using rule 102 (lambda -> .)
    RETURN          reduce using rule 102 (lambda -> .)
    ASSIGNMENT      reduce using rule 102 (lambda -> .)
    LEFTBRACE       reduce using rule 102 (lambda -> .)
    IF              reduce using rule 102 (lambda -> .)
    WHILE           reduce using rule 102 (lambda -> .)
    THIS            reduce using rule 102 (lambda -> .)
    LEFTSQRBRACKET  reduce using rule 102 (lambda -> .)
    LEFTPARENT      reduce using rule 102 (lambda -> .)
    SEMICOLON       reduce using rule 102 (lambda -> .)
    COMMA           reduce using rule 102 (lambda -> .)
    RIGHTSQRBRACKET reduce using rule 102 (lambda -> .)
    ELSE            reduce using rule 102 (lambda -> .)
    ADDITION        reduce using rule 102 (lambda -> .)
    SUBSTRACTION    reduce using rule 102 (lambda -> .)
    MULTIPLICATION  reduce using rule 102 (lambda -> .)
    DIVISION        reduce using rule 102 (lambda -> .)
    MODULO          reduce using rule 102 (lambda -> .)
    AND             reduce using rule 102 (lambda -> .)
    OR              reduce using rule 102 (lambda -> .)
    CONCAT          reduce using rule 102 (lambda -> .)
    LESS            reduce using rule 102 (lambda -> .)
    LESSEQUAL       reduce using rule 102 (lambda -> .)
    GREATER         reduce using rule 102 (lambda -> .)
    GREATEREQUAL    reduce using rule 102 (lambda -> .)
    EQUAL           reduce using rule 102 (lambda -> .)
    NOTEQUAL        reduce using rule 102 (lambda -> .)

    ClassDeclaration               shift and go to state 3
    ClassDeclarationList           shift and go to state 6
    lambda                         shift and go to state 4

state 4

    (3) ClassDeclarationList -> lambda .

    $end            reduce using rule 3 (ClassDeclarationList -> lambda .)


state 5

    (4) ClassDeclaration -> CLASS . IDEN LEFTBRACE FieldMethDecl RIGHTBRACE

    IDEN            shift and go to state 7


state 6

    (2) ClassDeclarationList -> ClassDeclaration ClassDeclarationList .

    $end            reduce using rule 2 (ClassDeclarationList -> ClassDeclaration ClassDeclarationList .)


state 7

    (4) ClassDeclaration -> CLASS IDEN . LEFTBRACE FieldMethDecl RIGHTBRACE

    LEFTBRACE       shift and go to state 8


state 8

    (4) ClassDeclaration -> CLASS IDEN LEFTBRACE . FieldMethDecl RIGHTBRACE
    (5) FieldMethDecl -> . FieldMeth FieldMethDecl
    (6) FieldMethDecl -> . lambda
    (7) FieldMeth -> . FieldDeclaration
    (8) FieldMeth -> . MethodDeclaration
    (102) lambda -> .
    (9) FieldDeclaration -> . Declarators IDEN SEMICOLON
    (16) MethodDeclaration -> . Declarators IDEN LEFTPARENT ParameterList RIGHTPARENT LEFTBRACE StatementList MethodReturn RIGHTBRACE
    (10) Declarators -> . Access Static Type
    (11) Access -> . PUBLIC
    (12) Access -> . PRIVATE
    (13) Access -> . lambda

    $end            reduce using rule 102 (lambda -> .)
    RIGHTBRACE      reduce using rule 102 (lambda -> .)
    STATIC          reduce using rule 102 (lambda -> .)
    INT             reduce using rule 102 (lambda -> .)
    BOOLEAN         reduce using rule 102 (lambda -> .)
    VOID            reduce using rule 102 (lambda -> .)
    IDEN            reduce using rule 102 (lambda -> .)
    RIGHTPARENT     reduce using rule 102 (lambda -> .)
    RETURN          reduce using rule 102 (lambda -> .)
    ASSIGNMENT      reduce using rule 102 (lambda -> .)
    LEFTBRACE       reduce using rule 102 (lambda -> .)
    IF              reduce using rule 102 (lambda -> .)
    WHILE           reduce using rule 102 (lambda -> .)
    THIS            reduce using rule 102 (lambda -> .)
    LEFTSQRBRACKET  reduce using rule 102 (lambda -> .)
    LEFTPARENT      reduce using rule 102 (lambda -> .)
    SEMICOLON       reduce using rule 102 (lambda -> .)
    COMMA           reduce using rule 102 (lambda -> .)
    RIGHTSQRBRACKET reduce using rule 102 (lambda -> .)
    ELSE            reduce using rule 102 (lambda -> .)
    ADDITION        reduce using rule 102 (lambda -> .)
    SUBSTRACTION    reduce using rule 102 (lambda -> .)
    MULTIPLICATION  reduce using rule 102 (lambda -> .)
    DIVISION        reduce using rule 102 (lambda -> .)
    MODULO          reduce using rule 102 (lambda -> .)
    AND             reduce using rule 102 (lambda -> .)
    OR              reduce using rule 102 (lambda -> .)
    CONCAT          reduce using rule 102 (lambda -> .)
    LESS            reduce using rule 102 (lambda -> .)
    LESSEQUAL       reduce using rule 102 (lambda -> .)
    GREATER         reduce using rule 102 (lambda -> .)
    GREATEREQUAL    reduce using rule 102 (lambda -> .)
    EQUAL           reduce using rule 102 (lambda -> .)
    NOTEQUAL        reduce using rule 102 (lambda -> .)
    PUBLIC          shift and go to state 16
    PRIVATE         shift and go to state 17

    FieldMethDecl                  shift and go to state 9
    FieldMeth                      shift and go to state 10
    lambda                         shift and go to state 11
    FieldDeclaration               shift and go to state 12
    MethodDeclaration              shift and go to state 13
    Declarators                    shift and go to state 14
    Access                         shift and go to state 15

state 9

    (4) ClassDeclaration -> CLASS IDEN LEFTBRACE FieldMethDecl . RIGHTBRACE

    RIGHTBRACE      shift and go to state 18


state 10

    (5) FieldMethDecl -> FieldMeth . FieldMethDecl
    (5) FieldMethDecl -> . FieldMeth FieldMethDecl
    (6) FieldMethDecl -> . lambda
    (7) FieldMeth -> . FieldDeclaration
    (8) FieldMeth -> . MethodDeclaration
    (102) lambda -> .
    (9) FieldDeclaration -> . Declarators IDEN SEMICOLON
    (16) MethodDeclaration -> . Declarators IDEN LEFTPARENT ParameterList RIGHTPARENT LEFTBRACE StatementList MethodReturn RIGHTBRACE
    (10) Declarators -> . Access Static Type
    (11) Access -> . PUBLIC
    (12) Access -> . PRIVATE
    (13) Access -> . lambda

    $end            reduce using rule 102 (lambda -> .)
    RIGHTBRACE      reduce using rule 102 (lambda -> .)
    STATIC          reduce using rule 102 (lambda -> .)
    INT             reduce using rule 102 (lambda -> .)
    BOOLEAN         reduce using rule 102 (lambda -> .)
    VOID            reduce using rule 102 (lambda -> .)
    IDEN            reduce using rule 102 (lambda -> .)
    RIGHTPARENT     reduce using rule 102 (lambda -> .)
    RETURN          reduce using rule 102 (lambda -> .)
    ASSIGNMENT      reduce using rule 102 (lambda -> .)
    LEFTBRACE       reduce using rule 102 (lambda -> .)
    IF              reduce using rule 102 (lambda -> .)
    WHILE           reduce using rule 102 (lambda -> .)
    THIS            reduce using rule 102 (lambda -> .)
    LEFTSQRBRACKET  reduce using rule 102 (lambda -> .)
    LEFTPARENT      reduce using rule 102 (lambda -> .)
    SEMICOLON       reduce using rule 102 (lambda -> .)
    COMMA           reduce using rule 102 (lambda -> .)
    RIGHTSQRBRACKET reduce using rule 102 (lambda -> .)
    ELSE            reduce using rule 102 (lambda -> .)
    ADDITION        reduce using rule 102 (lambda -> .)
    SUBSTRACTION    reduce using rule 102 (lambda -> .)
    MULTIPLICATION  reduce using rule 102 (lambda -> .)
    DIVISION        reduce using rule 102 (lambda -> .)
    MODULO          reduce using rule 102 (lambda -> .)
    AND             reduce using rule 102 (lambda -> .)
    OR              reduce using rule 102 (lambda -> .)
    CONCAT          reduce using rule 102 (lambda -> .)
    LESS            reduce using rule 102 (lambda -> .)
    LESSEQUAL       reduce using rule 102 (lambda -> .)
    GREATER         reduce using rule 102 (lambda -> .)
    GREATEREQUAL    reduce using rule 102 (lambda -> .)
    EQUAL           reduce using rule 102 (lambda -> .)
    NOTEQUAL        reduce using rule 102 (lambda -> .)
    PUBLIC          shift and go to state 16
    PRIVATE         shift and go to state 17

    FieldMeth                      shift and go to state 10
    FieldMethDecl                  shift and go to state 19
    lambda                         shift and go to state 11
    FieldDeclaration               shift and go to state 12
    MethodDeclaration              shift and go to state 13
    Declarators                    shift and go to state 14
    Access                         shift and go to state 15

state 11

    (6) FieldMethDecl -> lambda .
    (13) Access -> lambda .

    RIGHTBRACE      reduce using rule 6 (FieldMethDecl -> lambda .)
    STATIC          reduce using rule 13 (Access -> lambda .)
    INT             reduce using rule 13 (Access -> lambda .)
    BOOLEAN         reduce using rule 13 (Access -> lambda .)
    VOID            reduce using rule 13 (Access -> lambda .)
    IDEN            reduce using rule 13 (Access -> lambda .)


state 12

    (7) FieldMeth -> FieldDeclaration .
